--- a/references.bib
+++ b/references.bib
@@ -197,7 +197,15 @@ archivePrefix = "arXiv",
 	doi = {KSCI-19033-002}
 }
 
-@article{toyozumi_ashley_2005, title={Intra-Pixel Sensitivity Variation and Charge Transfer Inefficiency — Results of CCD Scans}, volume={22}, DOI={10.1071/AS05013}, number={3}, journal={Publications of the Astronomical Society of Australia}, publisher={Cambridge University Press}, author={Toyozumi, Hiroyuki and Ashley, Michael C. B.}, year={2005}, pages={257–266}}
+@article{toyozumi_ashley_2005,
+	title={Intra-Pixel Sensitivity Variation and Charge Transfer Inefficiency — Results of CCD Scans},
+	volume={22}, DOI={10.1071/AS05013},
+	number={3},
+	journal={Publications of the Astronomical Society of Australia},
+	publisher={Cambridge University Press},
+	author={Toyozumi, Hiroyuki and Ashley, Michael C. B.},
+	year={2005},
+	pages={257–266}}
 
 @ARTICLE{2018arXiv180607430V,
    author = {{Vorobiev}, D. and {Ninkov}, Z. and {Caldwell}, D. and {Mochnacki}, S.
@@ -212,4 +220,16 @@ archivePrefix = "arXiv",
     month = jun,
    adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180607430V},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{1748-0221-9-03-C03048,
+  author={P Antilogus and P Astier and P Doherty and A Guyonnet and N Regnault},
+  title={The brighter-fatter effect and pixel correlations in CCD sensors},
+  journal={Journal of Instrumentation},
+  volume={9},
+  number={03},
+  pages={C03048},
+  url={http://stacks.iop.org/1748-0221/9/i=03/a=C03048},
+  year={2014},
+  abstract={We present evidence that spots imaged using astronomical CCDs do not exactly scale with flux: bright spots tend to be broader than faint ones, using the same illumination pattern. We measure that the linear size of spots or stars, of typical size 3 to 4 pixels FWHM, increase linearly with their flux by up to 2 % over the full CCD dynamic range. This brighter-fatter effect affects both deep-depleted and thinned CCD sensors. We propose that this effect is a direct consequence of the distortions of the drift electric field sourced by charges accumulated within the CCD during the exposure and experienced by forthcoming light-induced charges in the same exposure. The pixel boundaries then become slightly dynamical: overfilled pixels become increasingly smaller than their neighbors, so that bright star sizes, measured in number of pixels, appear larger than those of faint stars. This interpretation of the brighter-fatter effect implies that pixels in flat-fields should exhibit statistical correlations, sourced by Poisson fluctuations, that we indeed directly detect. We propose to use the measured correlations in flat-fields to derive how pixel boundaries shift under the influence of a given charge pattern, which allows us in turn to predict how star shapes evolve with flux. We show that, within the precision of our tests, we are able to quantitatively relate the correlations of flat-field pixels and the broadening of stars with flux. This physical model of the brighter-fatter effect also explains the commonly observed phenomenon that the spatial variance of CCD flat-fields increases less rapidly than their average.}
 }
