--- a/simulation.tex
+++ b/simulation.tex
@@ -78,7 +78,7 @@ The coefficients $a_{x,n}, a_{y,n}$ were determined to emulate the magnitude of 
 Our model for the sensitivity variation was chosen to emulate the same noise magnitude as real \textit{K2} observations. For our noise metric, we use the Combined Differential Photometric Precision for consistency with \cite{2016AJ....152..100L}. We used a two-step benchmarking process to estimate the magnitude of variation in quantum sensitivity and contribution by photon noise and background noise.
 
 First we considered the no-motion case. For a large population of simulated targets with randomly generated stellar magnitude and detector position, the noise versus magnitude trend should closely follow that of the original \textit{Kepler} mission. To most accurately capture the characteristics of \textit{K2} data when analyzing the noise contributed by quantum sensitivity variation, our model included two sources of synthetic noise -- photon noise and background noise -- which contribute to the trend of increased noise for higher magnitude targets for the \textit{Kepler} mission. Benchmark Test 1 serves to constrain the levels of injected photon noise and background noise. The test consisted of plotting the CDPP for 1,000 targets from the original \textit{Kepler} mission and calculating the median value for each $Kp$ Mag at intervals of 0.5.
- 
+
 We generated five synthetic light curves for each 0.5-Mag interval with the following random variation of PSF parameters: centroid position varied by up to 0.2 pixels in both $x$ and $y$, $\sigma_x$ and $\sigma_y$ varied up to 10\% (${\sim}0.05$ pixels), and correlation coefficient $\rho$ varied up to 40\%. Each of these five simulated light curves is plotted against the \textit{Kepler} noise trend. This test was run iteratively on varied values of both background and photon noise until the slopes of the two trends approximately corresponded. To see the comparative noise of the resultant simulation, see Figure \ref{fig:nomotion}.
 
 \begin{figure}[h]
@@ -162,9 +162,11 @@ These results were achieved by applying PLD to pixels within an aperture around 
 
 \subsection{Direct Measurement of Sensitivity}
 
-We acknowledge the inconsistency in resultant intra-pixel sensitivity variation between our calibration tests and the direct measurement of the sub-pixel response by \cite{2018arXiv180607430V}. Future work is necessary to identify the source of the meaningfully different conclusions, and we would like to identify a number of factors that likely contribute. The primary suspect is the degeneracy between inter- and intra-pixel sensitivity variation in our motion benchmark, both of which contribute to the systematic noise of synthetic light curves. Also included in this degeneracy are the magnitudes of background noise and photon noise.
+We acknowledge the inconsistency in resultant intra-pixel sensitivity variation between our calibration tests and the direct measurement of the sub-pixel response by \cite{2018arXiv180607430V}. Future work is necessary to identify the source of the meaningfully different conclusions, and we would like to identify a number of factors that likely contribute. The primary suspect is the degeneracy between inter- and intra-pixel sensitivity variation in our motion benchmark, both of which contribute to the systematic noise of synthetic light curves. Also included in this degeneracy are the magnitudes of background noise and photon noise. With some variation in the distribution of sensitivity, it is possible to achieve similar noise values as those directly measured. However, the noise characterization performed in Benchmark Tests I & II found that the values we arrived at most closely matched the noise levels of \textit{K2} observations.
 
-Our calibration was based on \textit{K2} observations, and there are a number of physical differences between the current state of the space telescope detectors and the laboratory environment. \cite{2018arXiv180607430V} acknowledge the temperature difference, and when considered in combination with the potential degradation of the telescope detector after nearly a decade of use, this could result in a significant difference in measured sensitivity.
+Additionally, our calibration was based on \textit{K2} observations, and there are a number of physical differences between the current state of the space telescope detectors and the laboratory environment. \cite{2018arXiv180607430V} acknowledge the temperature difference, and when considered in combination with the potential degradation of the telescope detector after nearly a decade of use, this could result in a significant difference in measured sensitivity.
+
+It is also possible that the size of a stellar PSF would elicit a different response from the CCD's pixels compared to a much smaller PSF. \cite{1748-0221-9-03-C03048} 
 
 \subsection{Future Applications}
 
