--- a/references.bib
+++ b/references.bib
@@ -17,18 +17,22 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2017arXiv170205488L,
+@ARTICLE{2018AJ....156...99L,
    author = {{Luger}, R. and {Kruse}, E. and {Foreman-Mackey}, D. and {Agol}, E. and
 	{Saunders}, N.},
-    title = "{An update to the EVEREST K2 pipeline: Short cadence, saturated stars, and Kepler-like photometry down to Kp = 15}",
-  journal = {ArXiv e-prints},
+    title = "{An Update to the EVEREST K2 Pipeline: Short Cadence, Saturated Stars, and Kepler-like Photometry Down to Kp{\nbsp}={\nbsp}15}",
+  journal = {\aj},
 archivePrefix = "arXiv",
    eprint = {1702.05488},
  primaryClass = "astro-ph.IM",
- keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
-     year = 2017,
-    month = feb,
-   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170205488L},
+ keywords = {catalogs, planets and satellites: detection, techniques: photometric },
+     year = 2018,
+    month = sep,
+   volume = 156,
+      eid = {99},
+    pages = {99},
+      doi = {10.3847/1538-3881/aad230},
+   adsurl = {http://adsabs.harvard.edu/abs/2018AJ....156...99L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -232,4 +236,18 @@ archivePrefix = "arXiv",
   url={http://stacks.iop.org/1748-0221/9/i=03/a=C03048},
   year={2014},
   abstract={We present evidence that spots imaged using astronomical CCDs do not exactly scale with flux: bright spots tend to be broader than faint ones, using the same illumination pattern. We measure that the linear size of spots or stars, of typical size 3 to 4 pixels FWHM, increase linearly with their flux by up to 2 % over the full CCD dynamic range. This brighter-fatter effect affects both deep-depleted and thinned CCD sensors. We propose that this effect is a direct consequence of the distortions of the drift electric field sourced by charges accumulated within the CCD during the exposure and experienced by forthcoming light-induced charges in the same exposure. The pixel boundaries then become slightly dynamical: overfilled pixels become increasingly smaller than their neighbors, so that bright star sizes, measured in number of pixels, appear larger than those of faint stars. This interpretation of the brighter-fatter effect implies that pixels in flat-fields should exhibit statistical correlations, sourced by Poisson fluctuations, that we indeed directly detect. We propose to use the measured correlations in flat-fields to derive how pixel boundaries shift under the influence of a given charge pattern, which allows us in turn to predict how star shapes evolve with flux. We show that, within the precision of our tests, we are able to quantitatively relate the correlations of flat-field pixels and the broadening of stars with flux. This physical model of the brighter-fatter effect also explains the commonly observed phenomenon that the spatial variance of CCD flat-fields increases less rapidly than their average.}
+}
+
+@article{10.1086/668847,
+ ISSN = {00046280, 15383873},
+ URL = {http://www.jstor.org/stable/10.1086/668847},
+ abstract = {ABSTRACT.The Kepler Mission is searching for Earth-size planets orbiting solar-like stars by simultaneously observing >160,000>160,000 stars to detect sequences of transit events in the photometric light curves. The Combined Differential Photometric Precision (CDPP) is the metric that defines the ease with which these weak terrestrial transit signatures can be detected. An understanding of CDPP is invaluable for evaluating the completeness of the Kepler survey and inferring the underlying planet population. This paper describes how the Kepler CDPP is calculated, and introduces tables of rms CDPP on a per-target basis for 3-, 6-, and 12-hr transit durations, which are now available for all Kepler observations. Quarter 3 is the first typical set of observations at the nominal length and completeness for a quarter, from 2009 September 18 to 2009 December 16, and we examine the properties of the rms CDPP distribution for this data set. Finally, we describe how to employ CDPP to calculate target completeness, an important use case.},
+ author = {Jessie L. Christiansen and Jon M. Jenkins and Douglas A. Caldwell and Christopher J. Burke and Peter Tenenbaum and Shawn Seader and Susan E. Thompson and Thomas S. Barclay and Bruce D. Clarke and Jie Li and Jeffrey C. Smith and Martin C. Stumpe and Joseph D. Twicken and Jeffrey Van Cleve},
+ journal = {Publications of the Astronomical Society of the Pacific},
+ number = {922},
+ pages = {1279--1287},
+ publisher = {[The University of Chicago Press, Astronomical Society of the Pacific]},
+ title = {The Derivation, Properties, and Value of Kepler’s Combined Differential Photometric Precision},
+ volume = {124},
+ year = {2012}
 }
